[gd_scene load_steps=8 format=3 uid="uid://djjfectrmrx13"]

[ext_resource type="Script" uid="uid://cuhcrsgnvvb10" path="res://ui/lobby.gd" id="1_a2pnt"]

[sub_resource type="InputEventAction" id="InputEventAction_hgmly"]
action = &"ui_accept"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_4sfkc"]
events = [SubResource("InputEventAction_hgmly")]

[sub_resource type="InputEventAction" id="InputEventAction_nmq56"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_hgmly"]
events = [SubResource("InputEventAction_nmq56")]

[sub_resource type="InputEventAction" id="InputEventAction_4sfkc"]
action = &"ui_select"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_lyjxk"]
events = [SubResource("InputEventAction_4sfkc")]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_a2pnt")

[node name="StartButton" type="Button" parent="."]
offset_left = 130.0
offset_top = 530.0
offset_right = 233.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_4sfkc")
text = "START"

[node name="LeaveButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 530.0
offset_right = 122.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_hgmly")
text = "LEAVE"

[node name="CaptionLabel" type="Label" parent="."]
offset_left = 20.0
offset_right = 176.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 48
text = "LOBBY"

[node name="ClientInfoLabel" type="Label" parent="."]
offset_left = 415.0
offset_top = 548.0
offset_right = 774.0
offset_bottom = 571.0
text = "---"
horizontal_alignment = 1

[node name="PlayerInfo" type="Node2D" parent="."]

[node name="1" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 70.0
offset_right = 380.0
offset_bottom = 103.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/1"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="2" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 115.0
offset_right = 380.0
offset_bottom = 148.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/2"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="3" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 160.0
offset_right = 380.0
offset_bottom = 193.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/3"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="4" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 205.0
offset_right = 380.0
offset_bottom = 238.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/4"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="5" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 250.0
offset_right = 380.0
offset_bottom = 283.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/5"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="6" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 295.0
offset_right = 380.0
offset_bottom = 328.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/6"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="7" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 340.0
offset_right = 380.0
offset_bottom = 373.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/7"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="8" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 385.0
offset_right = 380.0
offset_bottom = 418.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/8"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="9" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 430.0
offset_right = 380.0
offset_bottom = 463.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/9"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="10" type="ColorRect" parent="PlayerInfo"]
offset_left = 20.0
offset_top = 475.0
offset_right = 380.0
offset_bottom = 508.0
color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="NameLabel" type="Label" parent="PlayerInfo/10"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 28.0
text = "..."

[node name="MapsList" type="ItemList" parent="."]
offset_left = 411.0
offset_top = 250.0
offset_right = 774.0
offset_bottom = 465.0

[node name="MapNameLabel" type="Label" parent="."]
offset_left = 414.0
offset_top = 38.0
offset_right = 454.0
offset_bottom = 61.0
text = "..."

[node name="ReadyBox" type="CheckBox" parent="."]
offset_left = 306.0
offset_top = 541.0
offset_right = 378.0
offset_bottom = 572.0
shortcut = SubResource("Shortcut_lyjxk")
text = "ready"

[node name="NumRoundsSpin" type="SpinBox" parent="."]
offset_left = 487.0
offset_top = 478.0
offset_right = 574.0
offset_bottom = 509.0
min_value = 1.0
value = 1.0
rounded = true

[node name="NumRoundsLabel" type="Label" parent="."]
offset_left = 416.0
offset_top = 482.0
offset_right = 456.0
offset_bottom = 505.0
text = "Rounds"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="item_selected" from="MapsList" to="." method="_on_maps_list_item_selected"]
[connection signal="toggled" from="ReadyBox" to="." method="_on_ready_box_toggled"]
[connection signal="value_changed" from="NumRoundsSpin" to="." method="_on_num_rounds_spin_value_changed"]
